Font set and hyperlink added

--- a/srnyberg.html
+++ b/srnyberg.html
@@ -14,6 +14,7 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">Hello world! Spencer Nyberg This assignment is something that is tough to learn but hopefully helpful.</span></p>
+<p class="p1"><span class="s1">Hello world! Spencer Nyberg This assignment is something that is tough to learn but hopefully helpful. 
+<a href=”http://www.google.com”> Google </a></span></p>
 </body>
 </html>
